--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.5.3",
     "axios": "^0.18.0",
     "history": "^4.7.2",
+    "http-server": "^0.11.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
